# ExtractRight

./: .gitignore  .gitmodules  CMakeLists.txt  ExtractRight.sln  README.md  Segmentation.sln  conanfile.txt
Challenge/: Challenge.vcxproj  main.cpp
ExtractRight/: Common.hpp  ExtractNoCheck.hpp  ExtractRight.cpp  ExtractRight.vcxproj  ExtractRight.vcxproj.filters
Segmentation/: Common.h  Segmentation.cpp  Segmentation.vcxproj  Segmentation.vcxproj.filters  Tests.cpp  main.cpp
presentation/: Benchmarks.xlsx
props/: boost.props  ranges.props
src/: ExtractNoCheck.hpp  main.cpp
